feat: 基本算法